ollama/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
spec:
  ports:
    - nodePort: 31506
      name: ollama
      port: 2701
      targetPort: 11434
  selector:
     app.kubernetes.io/name: ollama
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
